--- a/github-actions/panther-upload.yml
+++ b/github-actions/panther-upload.yml
@@ -18,22 +18,22 @@ jobs:
       id-token: write
       contents: read
     steps:
-      - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f #pin to latest release: v2.3.4
+      - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
       - uses: actions/setup-python@v4
         with:
           python-version: '3.9' 
       - name: Install Panther_Analysis_Tool & Panther Dependencies
-        run: pip3 install -r panther/requirements.txt
+        run: pip3 install -r requirements.txt
       - name: Setup Local Cache
         run: sudo docker run --name local.dynamodb -d -p 8000:8000 amazon/dynamodb-local -jar DynamoDBLocal.jar -port 8000
       - name: Create panther-kv-store table
-        run: aws dynamodb create-table --cli-input-json file://dev-tools/local-cache/initial-load.json --endpoint-url http://localhost:8000
+        run: aws dynamodb create-table --cli-input-json file://local-cache/initial-load.json --endpoint-url http://localhost:8000
       - name: Load Cache Tests (install deps, import yml, load cache)
         run: |
             sudo snap install yq
             sudo apt-get install -y jq
             touch tmp.txt
-            for file in  panther/cedar_rules/*/*.yml; do
+            for file in  PATH_TO_RULES_DIRECTORY/*/*.yml; do
                 yq '.Tests[0].Log.cache_load' $file | jq . | sed "s/<< DATETIME_NOW >>/$(date '+%Y-%m-%d %H:%M:%S.000')/g" > tmp.txt
                 if ! [[ $(cat tmp.txt) = null ]]; then
                     aws dynamodb batch-write-item --request-items file://tmp.txt --endpoint-url $LOCAL_DYNAMO_URL >> /dev/null
@@ -62,7 +62,7 @@ jobs:
         id: failure_slack_channel
         uses: slackapi/slack-github-action@v1.18.0
         with:
-          channel-id: security-system-alerts
+          channel-id: SLACK_CHANNEL_FOR_ERRORS
           payload: |
                 {
                   "text": "GitHub Action *Panther Upload - Rules* has failed",
@@ -89,7 +89,7 @@ jobs:
     steps:
       - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f #pin to latest release: v2.3.4
       - name: Install Panther_Analysis_Tool & Panther Dependencies
-        run: pip3 install -r panther/requirements.txt
+        run: pip3 install -r requirements.txt
       - name: Upload Schemas
         run: |
           export PANTHER_API_HOST=https://api.cedar.runpanther.net/public/graphql
@@ -101,7 +101,7 @@ jobs:
         id: failure_slack_channel
         uses: slackapi/slack-github-action@v1.18.0
         with:
-          channel-id: security-system-alerts
+          channel-id: SLACK_CHANNEL_FOR_ERRORS
           payload: |
                 {
                   "text": "GitHub Action *Panther Upload - Schemas* has failed",
